<?xml version="1.0"?>
<package format="3">
  <name>isobus</name>
  <version>0.1.0</version>
  <description>
    A control function focused implementation of the major ISOBUS and J1939 transport layers.
  </description>
  <maintainer email="delgrossoengineering@protonmail.com">Open-Agriculture</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>Threads</build_depend>
  <exec_depend>Threads</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>